# wordol_solver

./: Cargo.toml  README.md  index.html  tests_eligible.json  tests_not_eligible.json  units.json  wordol_output.json
docs/: index-aac7a19d2f45fcf4_bg.wasm  index-e7e2ba5dd2982700.js  index-e7e2ba5dd2982700_bg.wasm  index.html
src/: app.rs  data.rs  lib.rs  main.rs
tests/: tests.rs
