[package]
name = "wordol_solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yew = "0.19"
enum-iterator = "0.7"
num-traits = "0.2"
num-derive = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlSelectElement"]}